@@ -1,3 +1,7 @@
+bloonix-agent (0.52) released at 2015-04-14
+
+    * Satellite configuration parameters implemented.
+
 bloonix-agent (0.51) released at 2015-04-07
 
     * Fixed bloonix-init-host and implemented Bloonix::IO::SIPC.
